--- a/UnidadMedida/templates/nueva_unidad_medida.html
+++ b/UnidadMedida/templates/nueva_unidad_medida.html
@@ -12,7 +12,7 @@
     
                 <div class="col d-flex p-2 justify-content-end">
                     <button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button> &nbsp;
-                    <a href="{% url 'clasificaciones' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
+                    <a href="{% url 'unidades' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
                 </div>
                
     
