--- a/PresupuestoCliente/templates/detallePresupuesto.html
+++ b/PresupuestoCliente/templates/detallePresupuesto.html
@@ -1,4 +1,6 @@
 {% extends 'home.html' %}
+{% load tools %}
+
 {% block content %}
 <div class="mr-2 ml-2 p-4">
     <table class="table table-sm table-borderless ">
@@ -27,7 +29,7 @@
         </tr>
         <tr>
             <th scope="col">Total Presupuesto:</th>
-            <td style="background-color: #055F83; color: white;">{{ presupuesto.total_presupuesto|floatformat:"0" }}
+            <td style="background-color: #055F83; color: white; font-size:25px;text-align:center">{{ presupuesto.total_presupuesto|intpoint }}
             </td>
             <td><a href="{% url 'presupuesto' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i>
                     Regresar</a></td>
@@ -54,7 +56,7 @@
 
                 <td> {{pre.id}} </td>
                 <td> {{pre.producto}} </td>
-                <td style="text-align: right;"> {{pre.precio_unitario|floatformat:"0"}} </td>
+                <td style="text-align: right;"> {{pre.precio_unitario|intpoint}} </td>
                 <td style="text-align: right;">{{ pre.cantidad }}</td>
             </tr>
             {% endfor %}
